--- a/Joyce/src/main/resources/templates/source/playSourcePage.html
+++ b/Joyce/src/main/resources/templates/source/playSourcePage.html
@@ -95,6 +95,7 @@
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);*/
         });
+     //寻找索引
         function findIndex(){
             var index = 0;
             for (let i = 0; i < array.length; i++) {
