--- a/Joyce/src/main/resources/templates/source/playSourcePage.html
+++ b/Joyce/src/main/resources/templates/source/playSourcePage.html
@@ -11,7 +11,8 @@
             <div id="willesPlay">
                 <div class="playHeader">
                     <div class="videoName" th:text="${sourceName}"></div>
-                    <<input id="id" type="hidden" th:value="${id}"/>
+                    <input id="id" type="hidden" th:value="${id}"/>
+                    <input id="exist" type="hidden" th:value="${exist}"/>
                 </div>
                 <div class="playContent">
                     <div class="turnoff">
@@ -69,6 +70,9 @@
       var array = [];
       var id= $('#id').val();
      $(document).ready(function () {
+            if($('#exist').val()==='1'){
+                tips(false,"文件链接不存在")
+            }
             if(id==null){
                 toList("/example/source");
             }
