--- a/Joyce/src/main/resources/templates/source/playSourcePage.html
+++ b/Joyce/src/main/resources/templates/source/playSourcePage.html
@@ -11,6 +11,9 @@
                 <div class="playHeader">
                     <div class="videoName" th:text="${sourceName}"></div>
                     <input id="id" type="hidden" th:value="${id}"/>
+                    <input id="searchWord" type="hidden" th:value="${searchWord}"/>
+                    <input id="type" type="hidden" th:value="${type}"/>
+                    <input id="lable" type="hidden" th:value="${lable}"/>
                     <input id="exist" type="hidden" th:value="${exist}"/>
                 </div>
                 <div class="playContent">
