--- a/Joyce/src/main/resources/templates/source/sourceListPage.html
+++ b/Joyce/src/main/resources/templates/source/sourceListPage.html
@@ -1,62 +1,72 @@
 <head class="paneBar" th:replace="/common/public/header::header(~{::title})">
-  <title>资源列表</title>
+    <title>资源列表</title>
 </head>
-<link  rel="stylesheet" th:href="@{/static/css/source/source.css}"/>
+<link rel="stylesheet" th:href="@{/static/css/source/source.css}"/>
 <div class="container-fluid" style="width: 90%;margin-top:5%;margin-left: -3%">
-  <div class="col-md-11 content">
-    <div class="content-body">
-      <div id="user_list_div">
-        <div class="container-fluid">
-          <div>
-            <div id="toolbar-btn" class="btn-group pull-left" style="padding-bottom:10px;">
-              <button id="btn_add" onclick="toList('/example/source/sourcePage')" type="button" class="btn btn-primary btn-space">添加
-              </button>
-              <button id="btn_delete" onclick="deleteSourceFuc()" type="button" class="btn btn-danger btn-space">删除
-              </button>
-            </div>
-            <div class="pull-right" id="query-form" style="padding-bottom:10px;">
-              <div class="btn-group">
-              <select name="type" class="form-control">
-                <option value="">全部</option>
-                <option value="0">图片</option>
-                <option value="3">视频</option>
-              </select>
-            </div>
-              <div class="btn-group">
-              <input name="searchWord" placeholder='关键字' type="text"
-                     style="float:left;width:150px;margin-right:5px;" v-model="searchWord"
-                     class="form-control">
-              </div>
-              <div class="btn-group">
-                <button id="btn_search" onclick="sourceSearch()" type="button" class="btn btn-primary btn-space">搜索
-                  <span class="fa fa-search" aria-hidden="true"></span>
-                </button>
-                <button id="btn_reset" onclick="resetSearch()" type="button" class="btn btn-default btn-space">重置
-                  <span class="fa fa-eraser" aria-hidden="true"></span>
-                </button>
-              </div>
+    <div class="col-md-11 content">
+        <div class="content-body">
+            <div id="user_list_div">
+                <div class="container-fluid">
+                    <div>
+                        <div id="toolbar-btn" class="btn-group pull-left" style="padding-bottom:10px;">
+                            <button id="btn_add" onclick="toList('/example/source/sourcePage')" type="button"
+                                    class="btn btn-primary btn-space">添加
+                            </button>
+                            <button id="btn_delete" onclick="deleteSourceFuc()" type="button"
+                                    class="btn btn-danger btn-space">删除
+                            </button>
+                        </div>
+                        <div class="pull-right" id="query-form" style="padding-bottom:10px;">
+                            <div class="btn-group">
+                                <select name="type" class="form-control">
+                                    <option value="">全部</option>
+                                    <option value="0">图片</option>
+                                    <option value="3">视频</option>
+                                </select>
+                            </div>
+                            <div class="btn-group">
+                                <input name="searchWord" placeholder='关键字' type="text"
+                                       style="float:left;width:150px;margin-right:5px;" v-model="searchWord"
+                                       class="form-control">
+                            </div>
+                            <div class="btn-group">
+                                <input name="lable" placeholder='标签' type="text"
+                                       style="float:left;width:150px;margin-right:5px;" v-model="lable"
+                                       class="form-control">
+                            </div>
+                            <div class="btn-group">
+                                <button id="btn_search" onclick="sourceSearch()" type="button"
+                                        class="btn btn-primary btn-space">搜索
+                                    <span class="fa fa-search" aria-hidden="true"></span>
+                                </button>
+                                <button id="btn_reset" onclick="resetSearch()" type="button"
+                                        class="btn btn-default btn-space">重置
+                                    <span class="fa fa-eraser" aria-hidden="true"></span>
+                                </button>
+                            </div>
 
-            </div>
-          </div>
-          <!-- Modal -->
-          <div class="modal fade" id="video_modal">
-            <div class="modal-dialog modal-dialog-centered">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <video width="100%" autoplay loop>
-                    <source id="v_source" src="">
-                  </video>
+                        </div>
+                    </div>
+                    <!-- Modal -->
+                    <div class="modal fade" id="video_modal">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <video width="100%" autoplay loop>
+                                        <source id="v_source" src="">
+                                    </video>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <table id="sourceTable" data-mobile-responsive="true"
+                           class="mb-bootstrap-table text-nowrap"></table>
+
                 </div>
-              </div>
             </div>
-          </div>
-
-          <table id="sourceTable" data-mobile-responsive="true" class="mb-bootstrap-table text-nowrap"></table>
-
         </div>
-      </div>
     </div>
-  </div>
 </div>
 <script type="text/javascript" th:src="@{/static/js/jQuery.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/source/source.js}"></script>
