--- a/Joyce/src/main/resources/templates/source/playSourcePage.html
+++ b/Joyce/src/main/resources/templates/source/playSourcePage.html
@@ -59,6 +59,15 @@
                     <div class="list">
                         <span id="pri" class="play-list1" onclick="pri()">上一个</span>
                         <span id="next" class="play-list1" onclick="next()">下一个</span>
+                        <span  class="play-speed">
+                            <select id="speed">
+                                <option value="0.5" >x0.5</option>
+                                <option value="1" selected="selected">x1</option>
+                                <option value="2">x2</option>
+                                <option value="4">x4</option>
+                                <option value="8">x8</option>
+                             </select>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -106,6 +115,13 @@
              hm.src = "/example/source/playVideo/"+id;
              var s = document.getElementsByTagName("script")[0];
              s.parentNode.insertBefore(hm, s);*/
+
+            $("#speed").change(function () {
+            //    console.log("速度："+$("#speed").val());
+                var video = document.querySelector("video");
+                video .playbackRate =   parseFloat($("#speed").val());
+                video.play();
+            })
         });
 
         //寻找索引
