--- a/Joyce/src/main/resources/templates/user/loginPage.html
+++ b/Joyce/src/main/resources/templates/user/loginPage.html
@@ -56,7 +56,7 @@
                        <div class="col-sm-8  loginBtns">
                            <input class="btn btn-default pull-left" id="login" type="button" onclick="loginFuc()" value="登录"/>
                            <a href="javascript:void(0)"  style="margin: 0 12%;" onclick="openForgetPasswordModelFuc()">忘记密码</a>
-                           <a class="btn btn-default pull-right" th:href="@{'/example/user/regist'}">去注册</a>
+                           <a class="btn btn-default pull-right"  style="margin-left: 20%" th:href="@{'/example/user/regist'}">去注册</a>
                        </div>
                    </div>
                </form>
