--- a/Joyce/src/main/resources/templates/user/registPage.html
+++ b/Joyce/src/main/resources/templates/user/registPage.html
@@ -29,13 +29,13 @@
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="phone">手机号码</label>
                     <div class="col-sm-8">
-                        <input class="form-control" id="phone" type="text" name="phone"  placeholder="请输入手机号码" onchange="phoneRegFuc()" />
+                        <input class="form-control" id="phone" type="text" name="phone"  placeholder="请输入手机号码" onchange="checkFill(this.value,info.phoneReg,info.returnPhoneMsg)" />
                     </div>
                 </div>
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for="email">邮件</label>
                     <div class="col-sm-8">
-                        <input class="form-control" id="email" type="text"  name="email" placeholder="请输入邮件" onchange="emailRegFuc()"/>
+                        <input class="form-control" id="email" type="text"  name="email" placeholder="请输入邮件" onchange="checkFill(this.value,info.phoneReg,info.returnEmailMsg)"/>
                     </div>
                 </div>
                 <div class="form-group ">
