--- a/Joyce/src/main/resources/templates/common/public/headerBar.html
+++ b/Joyce/src/main/resources/templates/common/public/headerBar.html
@@ -8,7 +8,7 @@
     <input class="main_type" type="hidden" th:value="${session.session_user.status}"/>
     <div id="app_bar" class="navbar navbar-default" style="z-index: 9999999999!important;" role="navigation">
         <div class="navbar-header">
-           <a href="##" class="navbar-brand">Joyce</a>
+           <a href="javascript:void(0)" class="navbar-brand" th:onclick="menuShowHide()">Joyce</a>
         </div>
         <ul id="menu_bar" class="nav navbar-nav">
         </ul>
