--- a/Joyce/src/main/resources/templates/tools/createCode/getDb.html
+++ b/Joyce/src/main/resources/templates/tools/createCode/getDb.html
@@ -117,7 +117,7 @@
                                        style="float:left;width:150px;margin-right:5px;" v-model="databaseType"
                                        class="form-control">
                             </div>
-                            <div class="btn-group">
+                            <div class="btn-group pull-right">
                                 <button id="btn_search" onclick="dbSearch()" type="button" class="btn btn-primary btn-space">搜索
                                     <span class="fa fa-search" aria-hidden="true"></span>
                                 </button>
