--- a/Joyce/src/main/resources/templates/tools/uEditor/uEditorPage.html
+++ b/Joyce/src/main/resources/templates/tools/uEditor/uEditorPage.html
@@ -26,6 +26,7 @@
             </div>
             <form id="form_data">
                 <input type="hidden" id="article_id" th:value="${article.id}">
+                <input type="hidden" id="result" th:value="${article.result}">
                 <input type="hidden" id="article_result" th:value="${article.result}">
                 <div style="margin-left: 22px;margin-top: 30px;">
                     输入文章名<input style="margin-right: 10%" type="text" class="article" id='in_title' required="required"
@@ -85,6 +86,7 @@
         }).done(function (data) {
             if (data.rs) {
            //     tips(data.rs,data.msg)
+                var  editorTheme = "pastel-on-dark";
                 if ($('#article_result').val() === "1") {
                     var params = data.data.params;
                     if (notNull(params.ueColor)){
@@ -139,7 +141,9 @@
                                 $("#add_article_info").modal('show');
                             },
                             index: function () {
-                                saveEdit();
+                                if ($('#result').val()==='1'){
+                                    saveEdit();
+                                }
                                 toList("/example/uedit/uEditorListPage");
                             }
                         }
@@ -166,6 +170,8 @@
     }
 
     window.onbeforeunload = function () {
-        saveEdit();
+        if ($('#result').val()==='1'){
+            saveEdit();
+        }
     }
 </script>
