--- a/Joyce/src/main/resources/templates/tools/uEditor/uEditorPage.html
+++ b/Joyce/src/main/resources/templates/tools/uEditor/uEditorPage.html
@@ -28,6 +28,7 @@
                 <input type="hidden" id="article_id" th:value="${article.id}">
                 <input type="hidden" id="result" th:value="${article.result}">
                 <input type="hidden" id="article_result" th:value="${article.result}">
+                <input type="hidden" id="in_author" th:value="${article.author}">
                 <div style="margin-left: 22px;margin-top: 30px;">
                     输入文章名<input style="margin-right: 10%" type="text" class="article" id='in_title' required="required"
                                 placeholder="请输入文章名" autocomplete="off" th:value="${article.title}"/>
@@ -71,7 +72,7 @@
 <script th:src="@{/static/editor/lib/flowchart.min.js}"></script>
 <script th:src="@{/static/editor/lib/jquery.flowchart.min.js}"></script>
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
-<script type="text/javascript">
+<script type="text/javascript" th:inline="javascript">
     var testEditor;
     $(function () {
         init();
@@ -111,7 +112,7 @@
                         imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
                         imageUploadURL: "/example/uedit/upload",
                         onload: function () {
-                            console.log('onload', this);
+                           // console.log('onload', this);
                         },
                         /*指定需要显示的功能按钮*/
                         toolbarIcons: function () {
