--- a/Joyce/src/main/resources/templates/common/public/getColumns.html
+++ b/Joyce/src/main/resources/templates/common/public/getColumns.html
@@ -27,7 +27,7 @@
                 <div class="form-group ">
                     <label class="col-sm-2 control-label" for=""> </label>
                     <div class="col-sm-8">
-                        <input class="btn btn-default pull-left" id="sure" type="button" onclick="tableStructure()" value="查看表设计"/>
+                        <input class="btn btn-default pull-left" id="sure" type="button" onclick="tableStructure2()" value="查看表设计"/>
                         <input class="btn btn-default pull-right" type="button"onclick="lookDetailTableData()" value="查看详情" />
                         <input class="btn btn-default" id="create" type="button" onclick="inputColumns()" value="创建java代码"/>
                         <input  class="btn btn-default pull-right" id="download" type="button" onclick="downloadWebFile()" value="下载"/>
