--- a/Joyce/src/main/resources/templates/main/main.html
+++ b/Joyce/src/main/resources/templates/main/main.html
@@ -12,6 +12,7 @@
     <div class="screen">
         <div class="window">
             <div class="title">
+                <input id="rc" type="hidden" th:value="${redisConnection}"/>
                 <!--<img src="css/1.jpg">-->
                 <span>Joyce</span>
             </div>
