--- a/Joyce/src/main/resources/templates/main/main2.html
+++ b/Joyce/src/main/resources/templates/main/main2.html
@@ -17,6 +17,7 @@
             <h1 class="intro__title">Joyce App</h1>
             <div class="intro__subtitle">
                 <div class="intro__description">
+                    <input id="rc" type="hidden" th:value="${redisConnection}"/>
                     <h4 class="intro__description__content">A gift for a big fool</h4>
                     <!--<a href="http://instagram.com/danrubin/">Dan Rubin</a>.-->
             <!--        <div class="demos">
