--- a/Joyce/src/main/resources/templates/source/addAlbumPage.html
+++ b/Joyce/src/main/resources/templates/source/addAlbumPage.html
@@ -53,7 +53,7 @@
 </div>
 <script type="text/javascript" th:src="@{/static/js/jQuery.js}"></script>
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
-<script type="text/javascript" th:src="@{/static/js/source/album.js}"></script>
+<script type="text/javascript" th:src="@{/js/source/album.js}"></script>
 <script type="text/javascript">
     $(function(){
         uploadAlbum(6,12);
