--- a/Joyce/src/main/resources/templates/tools/createCode/getTables.html
+++ b/Joyce/src/main/resources/templates/tools/createCode/getTables.html
@@ -4,7 +4,7 @@
 <div class="log">
     <head class="panelBar" th:replace="/common/public/headerBar::bar"></head>
 </div>
-<link rel="stylesheet"  type="text/css" th:href="@{/static/css/common/public/getTable.css}" />
+<link rel="stylesheet"  type="text/css" th:href="@{/getTable.css}" />
 <div class="container">
     <div class="row row-centered">
         <input type="hide" id="dbName" th:value="${dbName}"/>
