--- a/Joyce/src/main/resources/templates/common/public/headerBar.html
+++ b/Joyce/src/main/resources/templates/common/public/headerBar.html
@@ -17,7 +17,7 @@
             <input id="session_user_id" type="hidden" th:value="${session.session_user.id}">
           <span><img id="user_img" th:src="${session.session_user.fileUrl}" class="img-circle" onclick="dropdownBlock()"></span>
             <span style="margin: 100%;line-height: 0%" th:text="${session.session_user.username}"></span>
-        <span><ul class="list-group" style="display: none; margin-right: 7%;">
+        <span><ul class="list-group" style="display: none; margin-right: 7%;background-color: whitesmoke">
               <li> <a href="javascript:void(0)" data-toggle="modal" data-target="#queryModel"
                       th:onclick="'queryUserFuc('+${session.session_user.id}+')'"> 详细信息</a> </li>
               <li> <a href="javascript:void(0)" data-toggle="modal" data-target="#editModal"
