--- a/Joyce/src/main/resources/templates/source/albumPage.html
+++ b/Joyce/src/main/resources/templates/source/albumPage.html
@@ -16,7 +16,7 @@
 	</div>
 </div>
 <script type="text/javascript" th:src="@{/static/js/jQuery.js}"></script>
-<script type="text/javascript" th:src="@{/static/js/source/album.js}"></script>
+<script type="text/javascript" th:src="@{/js/source/album.js}"></script>
 <head class="panelBar" th:replace="/common/public/footer::footer"></head>
 <script type="text/javascript">
 	$().ready(function () {
