--- a/Joyce/src/main/resources/templates/tools/uEditor/uEditorPage.html
+++ b/Joyce/src/main/resources/templates/tools/uEditor/uEditorPage.html
@@ -46,7 +46,7 @@
         <div class="layui-col-md12">
             <!--博客表单-->
             <form name="mdEditorForm">
-                <input type="button" class="pull-right">
+                <input class="result_button" type="button" style="margin-left: 93%;width: 6%" value="返回" onclick="toList('/example/uedit/uEditorListPage')" >
                 <div id="article_content_info">
                     <textarea id="in_content" name="content" type="markdown" style="display:none;"
                               th:text="${article.content}"> </textarea>
@@ -75,6 +75,9 @@
 <script type="text/javascript" th:inline="javascript">
     var testEditor;
     $(function () {
+        if ($('#article_result').val()==='1'){
+            $('.result_button').hide();
+        }
         init();
     });
 
